# wordle

./: pyproject.toml
wordle-cheat/: main.py
