[tool.poetry]
name = "wordle-cheat"
version = "0.1.0"
description = "Package to help your Wordle game"
authors = ["Justin Jeffery <justin.jeffery2012@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
